minor streaks example change

--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -117,7 +117,7 @@
     "\n",
     "streaks_geo['weight'] = streaks['weight']\n",
     "\n",
-    "# convert directions from image convention to geographic convetion\n",
+    "# convert directions from image convention to geographic convention\n",
     "# note that there is no clockwise swapping, because image axes are transposed\n",
     "streaks_geo['streaks_dir'] =  np.rad2deg(streaks['angle']) + streaks_geo['ground_heading']\n",
     "\n",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92005aa9",
+   "id": "0aedc0df",
    "metadata": {},
    "source": [
     "Using `source` keyword for `mouse_histogram`, we can link several histrograms"
@@ -327,22 +327,14 @@
     "hv_vf = plot_smooth.vectorfield()\n",
     "\n",
     "gridspace = hv.GridSpace(kdims=['smooth','mean'])\n",
-    "gridspace[(0,0)] = plot_smooth.mouse_histogram(source=plot_raw)\n",
-    "gridspace[(1,0)] = plot_smooth.mouse_histogram() \n",
-    "gridspace[(1,1)] = plot_smooth.mouse_histogram(source=plot_mean_smooth) \n",
-    "gridspace[(0,1)] = plot_smooth.mouse_histogram(source=plot_mean)\n",
+    "gridspace[(False,False)] = plot_smooth.mouse_histogram(source=plot_raw)\n",
+    "gridspace[(True,False)] = plot_smooth.mouse_histogram()\n",
+    "gridspace[(True,True)] = plot_smooth.mouse_histogram(source=plot_mean_smooth)\n",
+    "gridspace[(False,True)] = plot_smooth.mouse_histogram(source=plot_mean)\n",
     "\n",
     "\n",
-    "gridspace + (hv_img * hv_vf).opts(legend_position='right', frame_width=300)"
+    "gridspace.opts(plot_size=(200,200)) + (hv_img * hv_vf).opts(legend_position='right', frame_height=500)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c67070e2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
