--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -88,11 +88,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "windspeed_co = windspeed.invert_from_gmf(\n",
+    "windspeed_co = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        sarwing_ds.owi_ancillary_wind,\n",
-    "        gmf='cmod5n')\n"
+    "        model='gmf_cmod5n')\n"
    ]
   },
   {
@@ -133,15 +133,15 @@
    "outputs": [],
    "source": [
     "sarwing_luts_subset_path = xsar.get_test_file('sarwing_luts_subset')\n",
-    "windspeed.sarwing_luts.register(sarwing_luts_subset_path)\n",
+    "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
     "\n",
-    "windspeed_dual = windspeed.invert_from_gmf(\n",
+    "windspeed_dual = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
     "        windspeed.nesz_flattening(sarwing_ds.owiNesz_cross, sarwing_ds.owiIncidenceAngle),\n",
     "        sarwing_ds.owi_ancillary_wind,\n",
-    "        gmf=('cmod5n','cmodms1ahw'))"
+    "        model=('gmf_cmod5n','sarwing_lut_cmodms1ahw'))"
    ]
   },
   {
@@ -194,8 +194,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@windspeed.utils.register_cmod(inc_range=[17., 50.], wspd_range=[3., 80.], phi_range=None)\n",
-    "def dummy_gmf(incidence, speed, phi=None):\n",
+    "@windspeed.utils.register_gmf(inc_range=[17., 50.], wspd_range=[3., 80.], phi_range=None)\n",
+    "def gmf_dummy(incidence, speed, phi=None):  # FIXME need phi ?\n",
     "    a0 = 0.00013106836021008122\n",
     "    a1 = -4.530598283705591e-06\n",
     "    a2 = 4.429277425062766e-08\n",
@@ -217,13 +217,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "windspeed_dual = windspeed.invert_from_gmf(\n",
+    "windspeed_dual = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
     "        windspeed.nesz_flattening(sarwing_ds.owiNesz_cross, sarwing_ds.owiIncidenceAngle),\n",
     "        sarwing_ds.owi_ancillary_wind,\n",
-    "        gmf=('cmod5n','dummy_gmf'))"
+    "        model=('gmf_cmod5n','gmf_dummy'))"
    ]
   },
   {
@@ -240,6 +240,14 @@
     "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-5,5), title='xsarsea-sarwing')\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d8de09a-4650-4a73-90a0-35303fd71205",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
