--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -178,10 +178,12 @@
     "\n",
     "To register a new GMF with `xsarsea.windspeed`, you have to follow the following rules:\n",
     "\n",
-    "  * parameters are `(incidence, windspeed)` or `(incidence, windspeed, phi)`\n",
+    "  * parameters are `(incidence, windspeed, phi)`\n",
     "    * `incidence` is in degrees\n",
     "    * `windspeed` is in m/s\n",
     "    * `phi` is wind direction, in degrees, relative to antenna look (0 is downwind in the antenna direction)\n",
+    "    \n",
+    "       note that `phi` is mandatory. If the gmf doesn't need `phi`, you have to explicitely set `phi=None` kwarg. \n",
     "    \n",
     "  * all parameters must be **float**. numpy array are not allowed. `xsarsea.windspeed` will vectorize the function with numba to allow numpy arrays.\n",
     "  * returned sigma0 must be **linear**, not dB."
@@ -194,8 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@windspeed.utils.register_gmf(inc_range=[17., 50.], wspd_range=[3., 80.], phi_range=None)\n",
-    "def gmf_dummy(incidence, speed, phi=None):  # FIXME need phi ?\n",
+    "@windspeed.utils.register_gmf(inc_range=[17., 50.], wspd_range=[3., 80.])\n",
+    "def gmf_dummy(incidence, speed, phi=None): \n",
     "    a0 = 0.00013106836021008122\n",
     "    a1 = -4.530598283705591e-06\n",
     "    a2 = 4.429277425062766e-08\n",
