only allow gmf functions that starts with 'gmf_'

--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -186,7 +186,8 @@
     "       note that `phi` is mandatory. If the gmf doesn't need `phi`, you have to explicitely set `phi=None` kwarg. \n",
     "    \n",
     "  * all parameters must be **float**. numpy array are not allowed. `xsarsea.windspeed` will vectorize the function with numba to allow numpy arrays.\n",
-    "  * returned sigma0 must be **linear**, not dB."
+    "  * returned sigma0 must be **linear**, not dB.\n",
+    "  * function name must start with `gmf_`"
    ]
   },
   {
