--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -174,7 +174,7 @@
    "source": [
     "## Adding your own GMF\n",
     "\n",
-    "A *Geophysical Modeling Function * (GMF) is a function that return a simulated *sigma0* from wind condition and instrument incidence angle.\n",
+    "A *Geophysical Modeling Function* (GMF) is a function that return a simulated *sigma0* from wind condition and instrument incidence angle.\n",
     "\n",
     "To register a new GMF with `xsarsea.windspeed`, you have to follow the following rules:\n",
     "\n",
@@ -186,7 +186,8 @@
     "       note that `phi` is mandatory. If the gmf doesn't need `phi`, you have to explicitely set `phi=None` kwarg. \n",
     "    \n",
     "  * all parameters must be **float**. numpy array are not allowed. `xsarsea.windspeed` will vectorize the function with numba to allow numpy arrays.\n",
-    "  * returned sigma0 must be **linear**, not dB."
+    "  * returned sigma0 must be **linear**, not dB.\n",
+    "  * function name must start with `gmf_`"
    ]
   },
   {
@@ -196,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@windspeed.utils.register_gmf(inc_range=[17., 50.], wspd_range=[3., 80.])\n",
+    "@windspeed.gmfs.register_gmf(inc_range=[17., 50.], wspd_range=[3., 80.], pols=['VV'])\n",
     "def gmf_dummy(incidence, speed, phi=None): \n",
     "    a0 = 0.00013106836021008122\n",
     "    a1 = -4.530598283705591e-06\n",
