abstract class Model (GmfModel and SarwinLutModel)

--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -26,23 +26,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "032bce1d-7117-45b6-8850-9cdda32b371c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sarwing_luts_subset_path = xsar.get_test_file('sarwing_luts_subset')\n",
-    "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
-    "windspeed.available_models()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "430a3d16-3e29-4730-8ec3-b4a674fc1caf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@windspeed.gmfs.register_gmf(inc_range=[17., 50.], wspd_range=[3., 80.], pols=['VH'])\n",
+    "@windspeed.gmfs.register_gmf(inc_range=[17., 50.], wspd_range=[3., 80.], pols=['VH'], units='linear')\n",
     "def gmf_dummy(incidence, speed, phi=None): \n",
     "    a0 = 0.00013106836021008122\n",
     "    a1 = -4.530598283705591e-06\n",
@@ -61,6 +49,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ab5d131e-ca80-4095-b24b-511c30c22198",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sarwing_luts_subset_path = xsar.get_test_file('sarwing_luts_subset')\n",
+    "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
+    "windspeed.available_models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c517464e-7547-4a82-a482-b0062cf0ed23",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
     "\n",
     "def model_compare(compare_models):\n",
     "    \n",
-    "    luts = [ windspeed.get_lut(name, db=False)  for name in compare_models]\n",
+    "    luts = [ windspeed.available_models[name].to_lut(units='linear')  for name in compare_models]\n",
     "    \n",
     "    if 'phi' not in luts[0].dims:\n",
     "        kdims=['incidence']\n",
