--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -197,8 +197,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@windspeed.gmfs.register_gmf(inc_range=[17., 50.], wspd_range=[3., 80.], pols=['VH'])\n",
-    "def gmf_dummy(incidence, speed, phi=None): \n",
+    "@windspeed.gmfs.register_gmf(inc_range=[17., 50.], wspd_range=[3., 80.], pols=['VH'], units='linear')\n",
+    "def gmf_dummy(inc, wspd, phi=None): \n",
     "    a0 = 0.00013106836021008122\n",
     "    a1 = -4.530598283705591e-06\n",
     "    a2 = 4.429277425062766e-08\n",
@@ -206,9 +206,9 @@
     "    b1 = 0.004157838450541205\n",
     "    b2 = 3.4735809771069953e-05\n",
     "\n",
-    "    a = a0 + a1 * incidence + a2 * incidence ** 2\n",
-    "    b = b0 + b1 * incidence + b2 * incidence ** 2\n",
-    "    sig = a * speed ** b\n",
+    "    a = a0 + a1 * inc + a2 * inc ** 2\n",
+    "    b = b0 + b1 * inc + b2 * inc ** 2\n",
+    "    sig = a * wspd ** b\n",
     "\n",
     "    return sig\n"
    ]
@@ -248,6 +248,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9d8de09a-4650-4a73-90a0-35303fd71205",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a85758c-8239-44e1-b7b1-9af853ec3b41",
    "metadata": {},
    "outputs": [],
    "source": []
