remove nesz_cross from wind inversion, and added dsig_cr

--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "owi_ecmwf_wind = sarwing_ds.owiEcmwfWindSpeed * np.exp(1j* np.deg2rad(sarwing_ds.owiEcmwfWindDirection - sarwing_ds.owiHeading + 90))\n",
+    "owi_ecmwf_wind = sarwing_ds.owiEcmwfWindSpeed * np.exp(1j* np.deg2rad(sarwing_ds.owiEcmwfWindDirection - sarwing_ds.owiHeading )) * np.exp(1j * np.pi/2)\n",
     "sarwing_ds = xr.merge([\n",
     "    sarwing_ds,\n",
     "    owi_ecmwf_wind.to_dataset(name='owi_ancillary_wind'),\n",
@@ -135,12 +135,16 @@
     "sarwing_luts_subset_path = xsar.get_test_file('sarwing_luts_subset')\n",
     "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
     "\n",
+    "# nesz cross flattening, and dsig_cr\n",
+    "nesz_cross_flat = windspeed.nesz_flattening(sarwing_ds.owiNesz_cross, sarwing_ds.owiIncidenceAngle)\n",
+    "dsig_cr = (1.25 / (sarwing_ds.owiNrcs_cross / nesz_cross_flat )) ** 4.\n",
+    "\n",
     "windspeed_dual = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
-    "        windspeed.nesz_flattening(sarwing_ds.owiNesz_cross, sarwing_ds.owiIncidenceAngle),\n",
     "        sarwing_ds.owi_ancillary_wind,\n",
+    "        dsig_cr = dsig_cr,\n",
     "        model=('gmf_cmod5n','sarwing_lut_cmodms1ahw'))"
    ]
   },
