--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -228,8 +228,8 @@
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
-    "        windspeed.nesz_flattening(sarwing_ds.owiNesz_cross, sarwing_ds.owiIncidenceAngle),\n",
     "        sarwing_ds.owi_ancillary_wind,\n",
+    "        dsig_cr=dsig_cr,\n",
     "        model=('gmf_cmod5n','gmf_dummy'))"
    ]
   },
