--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@windspeed.gmfs.register_gmf(inc_range=[17., 50.], wspd_range=[3., 80.], pols=['VH'], units='linear')\n",
-    "def gmf_dummy(incidence, speed, phi=None): \n",
+    "@windspeed.gmfs.GmfModel.register(inc_range=[17., 50.], wspd_range=[3., 80.], pols=['VH'], units='linear')\n",
+    "def gmf_dummy(inc, wspd, phi=None): \n",
     "    a0 = 0.00013106836021008122\n",
     "    a1 = -4.530598283705591e-06\n",
     "    a2 = 4.429277425062766e-08\n",
@@ -39,9 +39,9 @@
     "    b1 = 0.004157838450541205\n",
     "    b2 = 3.4735809771069953e-05\n",
     "\n",
-    "    a = a0 + a1 * incidence + a2 * incidence ** 2\n",
-    "    b = b0 + b1 * incidence + b2 * incidence ** 2\n",
-    "    sig = a * speed ** b\n",
+    "    a = a0 + a1 * inc + a2 * inc ** 2\n",
+    "    b = b0 + b1 * inc + b2 * inc ** 2\n",
+    "    sig = a * wspd ** b\n",
     "\n",
     "    return sig"
    ]
@@ -54,8 +54,10 @@
    "outputs": [],
    "source": [
     "sarwing_luts_subset_path = xsar.get_test_file('sarwing_luts_subset')\n",
-    "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
-    "windspeed.available_models"
+    "#windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
+    "#/home/datawork-cersat-public/cache/project/sarwing/GMFS/v1.6/\n",
+    "windspeed.sarwing_luts.register_all_sarwing_luts('/home/oarcher/SAFE/sarwing_luts/v1.6')\n",
+    "windspeed.available_models()"
    ]
   },
   {
@@ -68,7 +70,7 @@
     "\n",
     "def model_compare(compare_models):\n",
     "    \n",
-    "    luts = [ windspeed.available_models[name].to_lut(units='linear')  for name in compare_models]\n",
+    "    luts = [ windspeed.available_models()[name].to_lut(units='dB')  for name in compare_models]\n",
     "    \n",
     "    if 'phi' not in luts[0].dims:\n",
     "        kdims=['incidence']\n",
@@ -111,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_compare([ 'gmf_cmod5n', 'gmf_cmod5' ])"
+    "model_compare([ 'gmf_cmod5n', 'sarwing_lut_cmod7' ])"
    ]
   },
   {
