allow crosspol only inversion. Model is now one pol only

--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xsar\n",
+    "import xsarsea\n",
     "from xsarsea import windspeed\n",
     "import xarray as xr\n",
     "import numpy as np\n",
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sarwing_owi_file = xsar.get_test_file('s1a-iw-owi-xx-20210909t130650-20210909t130715-039605-04AE83.nc')\n",
+    "sarwing_owi_file = xsarsea.get_test_file('s1a-iw-owi-xx-20210909t130650-20210909t130715-039605-04AE83.nc')\n",
     "sarwing_ds = xr.open_dataset(sarwing_owi_file)\n",
     "sarwing_ds = xr.merge([sarwing_ds, xr.open_dataset(sarwing_owi_file, group='owiInversionTables_UV')])\n",
     "sarwing_ds = sarwing_ds.rename_dims({'owiAzSize': 'atrack', 'owiRaSize': 'xtrack'})\n",
@@ -91,7 +91,7 @@
     "windspeed_co = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
-    "        sarwing_ds.owi_ancillary_wind,\n",
+    "        ancillary_wind = sarwing_ds.owi_ancillary_wind,\n",
     "        model='gmf_cmod5n')\n"
    ]
   },
@@ -112,7 +112,58 @@
    "source": [
     "windspeed_diff = windspeed_co - sarwing_ds.owiWindSpeed_Tab_copol\n",
     "(\n",
-    "    (hv.Image(windspeed_co).opts(title='xsarsea') + hv.Image(sarwing_ds.owiWindSpeed_Tab_copol).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,32))) +  \n",
+    "    (hv.Image(windspeed_co).opts(title='xsarsea') + hv.Image(sarwing_ds.owiWindSpeed_Tab_copol).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,50))) +  \n",
+    "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-0.2,0.2), title='xsarsea-sarwing')\n",
+    ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20a4a4cc-d209-4062-961f-0a6420c0fba4",
+   "metadata": {},
+   "source": [
+    "## crosspol inversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a772aa1-48e5-4654-aeb7-d655d51f7c71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sarwing_luts_subset_path = xsarsea.get_test_file('sarwing_luts_subset')\n",
+    "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d5fe397-05a8-460b-afc3-5ddbebbf80c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nesz cross flattening, and dsig_cr\n",
+    "nesz_cross_flat = windspeed.nesz_flattening(sarwing_ds.owiNesz_cross, sarwing_ds.owiIncidenceAngle)\n",
+    "dsig_cr = (1.25 / (sarwing_ds.owiNrcs_cross / nesz_cross_flat )) ** 4.\n",
+    "\n",
+    "windspeed_cr = windspeed.invert_from_model(\n",
+    "        sarwing_ds.owiIncidenceAngle,\n",
+    "        sarwing_ds.owiNrcs_cross,\n",
+    "        dsig_cr=dsig_cr,\n",
+    "        model='sarwing_lut_cmodms1ahw')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21eba4e7-0d3a-4c6b-a161-e5e92aa59d6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windspeed_diff = windspeed_cr - sarwing_ds.owiWindSpeed_Tab_crosspol\n",
+    "(\n",
+    "    (hv.Image(windspeed_cr).opts(title='xsarsea') + hv.Image(sarwing_ds.owiWindSpeed_Tab_crosspol).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,50))) +  \n",
     "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-0.2,0.2), title='xsarsea-sarwing')\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
@@ -132,18 +183,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sarwing_luts_subset_path = xsar.get_test_file('sarwing_luts_subset')\n",
+    "sarwing_luts_subset_path = xsarsea.get_test_file('sarwing_luts_subset')\n",
     "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
-    "\n",
-    "# nesz cross flattening, and dsig_cr\n",
-    "nesz_cross_flat = windspeed.nesz_flattening(sarwing_ds.owiNesz_cross, sarwing_ds.owiIncidenceAngle)\n",
-    "dsig_cr = (1.25 / (sarwing_ds.owiNrcs_cross / nesz_cross_flat )) ** 4.\n",
     "\n",
     "windspeed_co, windspeed_dual = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
-    "        sarwing_ds.owi_ancillary_wind,\n",
+    "        ancillary_wind=sarwing_ds.owi_ancillary_wind,\n",
     "        dsig_cr = dsig_cr,\n",
     "        model=('gmf_cmod5n','sarwing_lut_cmodms1ahw'))"
    ]
@@ -201,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@windspeed.gmfs.GmfModel.register(inc_range=[17., 50.], wspd_range=[3., 80.], pols=['VH'], units='linear')\n",
+    "@windspeed.gmfs.GmfModel.register(inc_range=[17., 50.], wspd_range=[3., 80.], pol='VH', units='linear')\n",
     "def gmf_dummy(inc, wspd, phi=None): \n",
     "    a0 = 0.00013106836021008122\n",
     "    a1 = -4.530598283705591e-06\n",
@@ -228,7 +275,7 @@
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
-    "        sarwing_ds.owi_ancillary_wind,\n",
+    "        ancillary_wind=sarwing_ds.owi_ancillary_wind,\n",
     "        dsig_cr=dsig_cr,\n",
     "        model=('gmf_cmod5n','gmf_dummy'))"
    ]
@@ -247,6 +294,14 @@
     "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-5,5), title='xsarsea-sarwing')\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5570ea84-43c4-4c88-885f-8e69dac0f32d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
