better image direction convention handling

--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -28,7 +28,7 @@
    "id": "19887be3-890a-4071-bb96-07814f9bd474",
    "metadata": {},
    "source": [
-    "## read sarwing owi file\n",
+    "## Read sarwing owi file\n",
     "\n",
     "download more from https://cyclobs.ifremer.fr/static/sarwing_datarmor/processings/c39e79a/default/reports/shoc_dailyupdate_names/report.html (in the 'safe' column, download files named like `*-owi-xx-*.nc`)"
    ]
@@ -41,10 +41,9 @@
    "outputs": [],
    "source": [
     "sarwing_owi_file = xsarsea.get_test_file('s1a-iw-owi-xx-20210909t130650-20210909t130715-039605-04AE83.nc')\n",
-    "sarwing_ds = xr.open_dataset(sarwing_owi_file)\n",
-    "sarwing_ds = xr.merge([sarwing_ds, xr.open_dataset(sarwing_owi_file, group='owiInversionTables_UV')])\n",
-    "sarwing_ds = sarwing_ds.rename_dims({'owiAzSize': 'atrack', 'owiRaSize': 'xtrack'})\n",
-    "sarwing_ds"
+    "sarwing_ds = xsarsea.read_sarwing_owi(sarwing_owi_file)\n",
+    "sarwing_ds\n",
+    "\n"
    ]
   },
   {
@@ -52,11 +51,9 @@
    "id": "4ced9944-f9ba-4fa8-aa95-4e14c49fe0f8",
    "metadata": {},
    "source": [
-    "## get ancillary wind\n",
+    "## Get ancillary wind\n",
     "\n",
-    "Ecmwf wind is stored in owi file in *geographical* (deg N/S) convention. `xsarsea.windspeed` need it in *antenna* convention, as a complex number\n",
-    "\n",
-    "So we need to substract the heading to get it relative to azimuth, and add 90° to get it relative to antenna."
+    "Ecmwf wind is stored in owi file in *geographical* (deg N/S) convention. `xsarsea.windspeed` need it relative to *xtrack* (ie antenna), as a complex number\n"
    ]
   },
   {
@@ -66,11 +63,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "owi_ecmwf_wind = sarwing_ds.owiEcmwfWindSpeed * np.exp(1j* np.deg2rad(sarwing_ds.owiEcmwfWindDirection - sarwing_ds.owiHeading )) * np.exp(1j * np.pi/2)\n",
+    "owi_ecmwf_wind = sarwing_ds.owiEcmwfWindSpeed * np.exp(1j* xsarsea.geo_dir_to_xtrack(sarwing_ds.owiEcmwfWindDirection, sarwing_ds.owiHeading))\n",
     "sarwing_ds = xr.merge([\n",
     "    sarwing_ds,\n",
     "    owi_ecmwf_wind.to_dataset(name='owi_ancillary_wind'),\n",
-    "])\n"
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a88e3200-dd0d-44e0-9760-a9bd9b2a9581",
+   "metadata": {},
+   "source": [
+    "## Ancillary wind control plot\n",
+    "\n",
+    "We check that ancillary wind is correct, by plotting the wind speed, the wind direction, and the wind direction components.\n",
+    "\n",
+    "The *xtrack* component increase with *xtrack* axis, and *atrack* component increase with *atrack*.\n",
+    "\n",
+    "Note that we have to use `kdims=['xtrack','atrack']` to properly display the vectorfield, because memory order `['xtrack','atrack']` is geographycally transposed "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cb363c1-f250-4156-ad1c-f257dbcbf768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_sarwing_ds = sarwing_ds.isel(atrack=slice(None, None, 10), xtrack=slice(None, None, 10))\n",
+    "\n",
+    "vectorfield = hv.VectorField(\n",
+    "    (\n",
+    "        sub_sarwing_ds.xtrack, sub_sarwing_ds.atrack,\n",
+    "        xsarsea.geo_dir_to_xtrack(sub_sarwing_ds.owiEcmwfWindDirection, sub_sarwing_ds.owiHeading),\n",
+    "        sub_sarwing_ds.owiEcmwfWindSpeed\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "owi_ecmwf_wind_xtrack = np.real(owi_ecmwf_wind)\n",
+    "owi_ecmwf_wind_atrack = np.imag(owi_ecmwf_wind)\n",
+    "(\n",
+    "    hv.Image(sarwing_ds.owiEcmwfWindSpeed, kdims=['xtrack','atrack']).opts(title='speed and dir', clim=(0,50), cmap='jet') * vectorfield\n",
+    "    + hv.Image(owi_ecmwf_wind_xtrack, kdims=['xtrack','atrack']).opts(title='xtrack component',cmap='bwr') * vectorfield\n",
+    "    + hv.Image(owi_ecmwf_wind_atrack, kdims=['xtrack','atrack']).opts(title='atrack component',cmap='bwr') * vectorfield\n",
+    ")"
    ]
   },
   {
@@ -112,8 +149,11 @@
    "source": [
     "windspeed_diff = windspeed_co - sarwing_ds.owiWindSpeed_Tab_copol\n",
     "(\n",
-    "    (hv.Image(windspeed_co).opts(title='xsarsea') + hv.Image(sarwing_ds.owiWindSpeed_Tab_copol).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,50))) +  \n",
-    "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-0.2,0.2), title='xsarsea-sarwing')\n",
+    "    (\n",
+    "        hv.Image(windspeed_co, kdims=['xtrack','atrack']).opts(title='xsarsea') \n",
+    "        + hv.Image(sarwing_ds.owiWindSpeed_Tab_copol, kdims=['xtrack','atrack']).opts(title='sarwing' )\n",
+    "    ).opts(hv.opts.Image(cmap='jet', clim=(0,50))) \n",
+    "    + hv.Image(windspeed_diff, kdims=['xtrack','atrack']).opts(cmap='jet', clim=(-0.2,0.2), title='xsarsea-sarwing')\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
   },
