--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xsar\n",
+    "import xsarsea\n",
     "from xsarsea import windspeed\n",
     "import xarray as xr\n",
     "import numpy as np\n",
@@ -28,7 +28,7 @@
    "id": "19887be3-890a-4071-bb96-07814f9bd474",
    "metadata": {},
    "source": [
-    "## read sarwing owi file\n",
+    "## Read sarwing owi file\n",
     "\n",
     "download more from https://cyclobs.ifremer.fr/static/sarwing_datarmor/processings/c39e79a/default/reports/shoc_dailyupdate_names/report.html (in the 'safe' column, download files named like `*-owi-xx-*.nc`)"
    ]
@@ -40,11 +40,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sarwing_owi_file = xsar.get_test_file('s1a-iw-owi-xx-20210909t130650-20210909t130715-039605-04AE83.nc')\n",
-    "sarwing_ds = xr.open_dataset(sarwing_owi_file)\n",
-    "sarwing_ds = xr.merge([sarwing_ds, xr.open_dataset(sarwing_owi_file, group='owiInversionTables_UV')])\n",
-    "sarwing_ds = sarwing_ds.rename_dims({'owiAzSize': 'atrack', 'owiRaSize': 'xtrack'})\n",
-    "sarwing_ds"
+    "sarwing_owi_file = xsarsea.get_test_file('s1a-iw-owi-xx-20210909t130650-20210909t130715-039605-04AE83.nc')\n",
+    "sarwing_ds = xsarsea.read_sarwing_owi(sarwing_owi_file)\n",
+    "sarwing_ds\n",
+    "\n"
    ]
   },
   {
@@ -52,11 +51,9 @@
    "id": "4ced9944-f9ba-4fa8-aa95-4e14c49fe0f8",
    "metadata": {},
    "source": [
-    "## get ancillary wind\n",
+    "## Get ancillary wind\n",
     "\n",
-    "Ecmwf wind is stored in owi file in *geographical* (deg N/S) convention. `xsarsea.windspeed` need it in *antenna* convention, as a complex number\n",
-    "\n",
-    "So we need to substract the heading to get it relative to azimuth, and add 90° to get it relative to antenna."
+    "Ecmwf wind is stored in owi file in *geographical* (deg N/S) convention. `xsarsea.windspeed` need it relative to *xtrack* (ie antenna), as a complex number\n"
    ]
   },
   {
@@ -66,11 +63,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "owi_ecmwf_wind = sarwing_ds.owiEcmwfWindSpeed * np.exp(1j* np.deg2rad(sarwing_ds.owiEcmwfWindDirection - sarwing_ds.owiHeading )) * np.exp(1j * np.pi/2)\n",
+    "owi_ecmwf_wind = sarwing_ds.owiEcmwfWindSpeed * np.exp(1j* xsarsea.geo_dir_to_xtrack(sarwing_ds.owiEcmwfWindDirection, sarwing_ds.owiHeading))\n",
     "sarwing_ds = xr.merge([\n",
     "    sarwing_ds,\n",
     "    owi_ecmwf_wind.to_dataset(name='owi_ancillary_wind'),\n",
-    "])\n"
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a88e3200-dd0d-44e0-9760-a9bd9b2a9581",
+   "metadata": {},
+   "source": [
+    "## Ancillary wind control plot\n",
+    "\n",
+    "We check that ancillary wind is correct, by plotting the wind speed, the wind direction, and the wind direction components.\n",
+    "\n",
+    "The *xtrack* component increase with *xtrack* axis, and *atrack* component increase with *atrack*.\n",
+    "\n",
+    "Note that we have to use `kdims=['xtrack','atrack']` to properly display the vectorfield, because memory order `['xtrack','atrack']` is geographycally transposed "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cb363c1-f250-4156-ad1c-f257dbcbf768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_sarwing_ds = sarwing_ds.isel(atrack=slice(None, None, 10), xtrack=slice(None, None, 10))\n",
+    "\n",
+    "vectorfield = hv.VectorField(\n",
+    "    (\n",
+    "        sub_sarwing_ds.xtrack, sub_sarwing_ds.atrack,\n",
+    "        xsarsea.geo_dir_to_xtrack(sub_sarwing_ds.owiEcmwfWindDirection, sub_sarwing_ds.owiHeading),\n",
+    "        sub_sarwing_ds.owiEcmwfWindSpeed\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "owi_ecmwf_wind_xtrack = np.real(owi_ecmwf_wind)\n",
+    "owi_ecmwf_wind_atrack = np.imag(owi_ecmwf_wind)\n",
+    "(\n",
+    "    hv.Image(sarwing_ds.owiEcmwfWindSpeed, kdims=['xtrack','atrack']).opts(title='speed and dir', clim=(0,50), cmap='jet') * vectorfield\n",
+    "    + hv.Image(owi_ecmwf_wind_xtrack, kdims=['xtrack','atrack']).opts(title='xtrack component',cmap='bwr') * vectorfield\n",
+    "    + hv.Image(owi_ecmwf_wind_atrack, kdims=['xtrack','atrack']).opts(title='atrack component',cmap='bwr') * vectorfield\n",
+    ")"
    ]
   },
   {
@@ -91,7 +128,7 @@
     "windspeed_co = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
-    "        sarwing_ds.owi_ancillary_wind,\n",
+    "        ancillary_wind = sarwing_ds.owi_ancillary_wind,\n",
     "        model='gmf_cmod5n')\n"
    ]
   },
@@ -112,7 +149,61 @@
    "source": [
     "windspeed_diff = windspeed_co - sarwing_ds.owiWindSpeed_Tab_copol\n",
     "(\n",
-    "    (hv.Image(windspeed_co).opts(title='xsarsea') + hv.Image(sarwing_ds.owiWindSpeed_Tab_copol).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,32))) +  \n",
+    "    (\n",
+    "        hv.Image(windspeed_co, kdims=['xtrack','atrack']).opts(title='xsarsea') \n",
+    "        + hv.Image(sarwing_ds.owiWindSpeed_Tab_copol, kdims=['xtrack','atrack']).opts(title='sarwing' )\n",
+    "    ).opts(hv.opts.Image(cmap='jet', clim=(0,50))) \n",
+    "    + hv.Image(windspeed_diff, kdims=['xtrack','atrack']).opts(cmap='jet', clim=(-0.2,0.2), title='xsarsea-sarwing')\n",
+    ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20a4a4cc-d209-4062-961f-0a6420c0fba4",
+   "metadata": {},
+   "source": [
+    "## crosspol inversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a772aa1-48e5-4654-aeb7-d655d51f7c71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sarwing_luts_subset_path = xsarsea.get_test_file('sarwing_luts_subset')\n",
+    "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d5fe397-05a8-460b-afc3-5ddbebbf80c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nesz cross flattening, and dsig_cr\n",
+    "nesz_cross_flat = windspeed.nesz_flattening(sarwing_ds.owiNesz_cross, sarwing_ds.owiIncidenceAngle)\n",
+    "dsig_cr = (1.25 / (sarwing_ds.owiNrcs_cross / nesz_cross_flat )) ** 4.\n",
+    "\n",
+    "windspeed_cr = windspeed.invert_from_model(\n",
+    "        sarwing_ds.owiIncidenceAngle,\n",
+    "        sarwing_ds.owiNrcs_cross,\n",
+    "        dsig_cr=dsig_cr,\n",
+    "        model='sarwing_lut_cmodms1ahw')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21eba4e7-0d3a-4c6b-a161-e5e92aa59d6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windspeed_diff = windspeed_cr - sarwing_ds.owiWindSpeed_Tab_crosspol\n",
+    "(\n",
+    "    (hv.Image(windspeed_cr).opts(title='xsarsea') + hv.Image(sarwing_ds.owiWindSpeed_Tab_crosspol).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,50))) +  \n",
     "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-0.2,0.2), title='xsarsea-sarwing')\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
@@ -132,18 +223,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sarwing_luts_subset_path = xsar.get_test_file('sarwing_luts_subset')\n",
+    "sarwing_luts_subset_path = xsarsea.get_test_file('sarwing_luts_subset')\n",
     "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
     "\n",
-    "# nesz cross flattening, and dsig_cr\n",
-    "nesz_cross_flat = windspeed.nesz_flattening(sarwing_ds.owiNesz_cross, sarwing_ds.owiIncidenceAngle)\n",
-    "dsig_cr = (1.25 / (sarwing_ds.owiNrcs_cross / nesz_cross_flat )) ** 4.\n",
-    "\n",
-    "windspeed_dual = windspeed.invert_from_model(\n",
+    "windspeed_co, windspeed_dual = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
-    "        sarwing_ds.owi_ancillary_wind,\n",
+    "        ancillary_wind=sarwing_ds.owi_ancillary_wind,\n",
     "        dsig_cr = dsig_cr,\n",
     "        model=('gmf_cmod5n','sarwing_lut_cmodms1ahw'))"
    ]
@@ -201,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@windspeed.gmfs.register_gmf(inc_range=[17., 50.], wspd_range=[3., 80.], pols=['VH'], units='linear')\n",
+    "@windspeed.gmfs.GmfModel.register(inc_range=[17., 50.], wspd_range=[3., 80.], pol='VH', units='linear')\n",
     "def gmf_dummy(inc, wspd, phi=None): \n",
     "    a0 = 0.00013106836021008122\n",
     "    a1 = -4.530598283705591e-06\n",
@@ -224,12 +311,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "windspeed_dual = windspeed.invert_from_model(\n",
+    "windspeed_co, windspeed_dual = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
-    "        windspeed.nesz_flattening(sarwing_ds.owiNesz_cross, sarwing_ds.owiIncidenceAngle),\n",
-    "        sarwing_ds.owi_ancillary_wind,\n",
+    "        ancillary_wind=sarwing_ds.owi_ancillary_wind,\n",
+    "        dsig_cr=dsig_cr,\n",
     "        model=('gmf_cmod5n','gmf_dummy'))"
    ]
   },
@@ -251,15 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d8de09a-4650-4a73-90a0-35303fd71205",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a85758c-8239-44e1-b7b1-9af853ec3b41",
+   "id": "5570ea84-43c4-4c88-885f-8e69dac0f32d",
    "metadata": {},
    "outputs": [],
    "source": []
