--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@windspeed.gmfs.GmfModel.register(inc_range=[17., 50.], wspd_range=[3., 80.], pols=['VH'], units='linear')\n",
+    "@windspeed.gmfs.GmfModel.register(inc_range=[17., 50.], wspd_range=[3., 80.], pol='VH', units='linear')\n",
     "def gmf_dummy(inc, wspd, phi=None): \n",
     "    a0 = 0.00013106836021008122\n",
     "    a1 = -4.530598283705591e-06\n",
@@ -54,10 +54,7 @@
    "outputs": [],
    "source": [
     "sarwing_luts_subset_path = xsar.get_test_file('sarwing_luts_subset')\n",
-    "#windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
-    "#/home/datawork-cersat-public/cache/project/sarwing/GMFS/v1.6/\n",
-    "windspeed.sarwing_luts.register_all_sarwing_luts('/home/oarcher/SAFE/sarwing_luts/v1.6')\n",
-    "windspeed.available_models()"
+    "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)"
    ]
   },
   {
@@ -99,6 +96,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4caf21ce-4b5a-4f95-af84-4442487acfff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windspeed.available_models(pol='VH')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8672da53-274e-42ed-be1a-72a7a47e8315",
    "metadata": {},
    "outputs": [],
@@ -109,17 +116,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c7cd7f8-5915-4fc5-b498-6c88bd36ce32",
+   "id": "4252c3f0-cc0d-43b8-9435-bf820f3bf7f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_compare([ 'gmf_cmod5n', 'sarwing_lut_cmod7' ])"
+    "windspeed.available_models(pol='VV')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5917a038-07a6-4bf4-bbdf-4b424c0522b1",
+   "id": "7c7cd7f8-5915-4fc5-b498-6c88bd36ce32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_compare([ 'gmf_cmod5n', 'gmf_cmod5' ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "339855a1-6d6b-46c8-96a6-348f02eb0986",
    "metadata": {},
    "outputs": [],
    "source": []
