--- a/docs/examples/xsarsea.ipynb
+++ b/docs/examples/xsarsea.ipynb
@@ -42,6 +42,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "logging.basicConfig()\n",
+    "logging.getLogger('xsarsea').setLevel(logging.DEBUG)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,7 +78,7 @@
    "outputs": [],
    "source": [
     "# open the dataset with xsar\n",
-    "sar_ds = xsar.open_dataset(filename, resolution={'atrack':10,'xtrack':10})\n",
+    "sar_ds = xsar.open_dataset(filename, resolution='1000m')\n",
     "sar_ds[['sigma0','incidence']]\n"
    ]
   },
@@ -88,8 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sar_ds['sigma0'] = sar_ds.sigma0.persist()\n",
-    "sar_ds['sigma0_detrend'] = xsarsea.sigma0_detrend(sar_ds.sigma0, sar_ds.incidence).persist()"
+    "sar_ds['sigma0'] = sar_ds.sigma0\n",
+    "sar_ds['sigma0_detrend'] = xsarsea.sigma0_detrend(sar_ds.sigma0, sar_ds.incidence)"
    ]
   },
   {
@@ -98,8 +109,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rasterize(hv.Image(sar_ds.sigma0.sel(pol='VV')).opts(cmap='gray',colorbar=True,tools=['hover'],title=\"original sigma0\")) \\\n",
-    "    + rasterize(hv.Image(sar_ds.sigma0_detrend.sel(pol='VV')).opts(cmap='gray',colorbar=True,tools=['hover'],title=\"detrended sigma0\"))"
+    "(\n",
+    "    hv.Image(sar_ds.sigma0.sel(pol='VV')).opts(title=\"original sigma0\") \\\n",
+    "    + hv.Image(sar_ds.sigma0_detrend.isel(pol=0)).opts(title=\"detrended sigma0\")\n",
+    ").opts(hv.opts.Image(cmap='gray', clim=(0,0.4)))"
    ]
   }
  ],
