--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -24,6 +24,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77f0e14b-9f80-4fc2-89e7-19113b6977d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "logging.basicConfig()\n",
+    "logging.getLogger('xsarsea').setLevel(logging.DEBUG)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "19887be3-890a-4071-bb96-07814f9bd474",
    "metadata": {},
