better logging messages and timing decorator

--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "sarwing_luts_subset_path = xsar.get_test_file('sarwing_luts_subset')\n",
-    "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)"
+    "windspeed.register_all_sarwing_luts(sarwing_luts_subset_path)"
    ]
   },
   {
