--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -29,15 +29,23 @@
     "import os\n",
     "import time\n",
     "\n",
-    "import logging\n",
-    "logging.basicConfig()\n",
-    "logging.getLogger('xsar.utils').setLevel(logging.DEBUG)\n",
-    "logging.getLogger('xsarsea.streaks').setLevel(logging.DEBUG)\n",
-    "\n",
     "import holoviews as hv\n",
     "hv.extension('bokeh')\n",
     "import geoviews as gv\n",
     "from holoviews.operation.datashader import rasterize\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4ea79fe-2816-4d74-b201-095370f3aaea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# optional debug messages\n",
+    "import logging\n",
+    "logging.basicConfig()\n",
+    "logging.getLogger('xsarsea.gradients').setLevel(logging.INFO) # or .setLevel(logging.DEBUG)"
    ]
   },
   {
@@ -50,8 +58,9 @@
     "# open a file a 100m \n",
     "filename = xsar.get_test_file('S1A_IW_GRDH_1SDV_20170907T103020_20170907T103045_018268_01EB76_Z010.SAFE') # irma\n",
     "#filename = xsar.get_test_file('S1B_IW_GRDH_1SDV_20181013T062322_20181013T062347_013130_018428_Z000.SAFE') # bz\n",
-    "filename=xsar.get_test_file('S1B_IW_GRDH_1SDV_20211024T051203_20211024T051228_029273_037E47_Z010.SAFE')\n",
+    "#filename=xsar.get_test_file('S1B_IW_GRDH_1SDV_20211024T051203_20211024T051228_029273_037E47_Z010.SAFE') # nices streaks\n",
     "#filename=xsar.get_test_file('S1A_IW_GRDH_1SDV_20170720T112706_20170720T112735_017554_01D5C2_Z010.SAFE') # subswath\n",
+    "#filename = '/home/oarcher/SAFE/S1A_EW_GRDM_1SDV_20181009T234410_20181009T234510_024066_02A153_DB9C.SAFE'\n",
     "sar_ds = xsar.open_dataset(filename,resolution='100m').isel(atrack=slice(20,None,None),xtrack=slice(20,None,None)) # isel to skip bad image edge\n",
     "\n",
     "# add detrended sigma0\n",
@@ -82,7 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gradients = xsarsea.gradients.Gradients(sar_ds['sigma0_detrend'].sel(pol='VV'), windows_sizes=[1600,3200], downscales_factors=[1,2])\n",
+    "gradients = xsarsea.gradients.Gradients(sar_ds['sigma0_detrend'], windows_sizes=[1600,3200], downscales_factors=[1,2])\n",
+    "#gradients = xsarsea.gradients.Gradients(sar_ds['sigma0_detrend'], windows_sizes=[400,800], downscales_factors=[1,2])\n",
     "\n",
     "# get gradients histograms as an xarray dataset\n",
     "hist = gradients.histogram\n",
@@ -91,7 +101,7 @@
     "hist['angles'] = hist['angles'] + np.pi/2\n",
     "\n",
     "#mean\n",
-    "hist_mean = hist.mean(['downscale_factor','window_size'])\n",
+    "hist_mean = hist.mean(['downscale_factor','window_size','pol'])\n",
     "\n",
     "# mean, and smooth\n",
     "hist_mean_smooth = hist_mean.copy()\n",
@@ -326,11 +336,15 @@
     "plot_mean = xsarsea.gradients.PlotGradients(hist_mean)\n",
     "hv_vf = plot_smooth.vectorfield()\n",
     "\n",
+    "hist_smooth_mean = hist_smooth.mean(['downscale_factor','window_size'])\n",
+    "plot_smooth_mean = xsarsea.gradients.PlotGradients(hist_smooth_mean)\n",
+    "\n",
     "gridspace = hv.GridSpace(kdims=['smooth','mean'])\n",
     "gridspace[(False,False)] = plot_smooth.mouse_histogram(source=plot_raw)\n",
     "gridspace[(True,False)] = plot_smooth.mouse_histogram()\n",
     "gridspace[(True,True)] = plot_smooth.mouse_histogram(source=plot_mean_smooth)\n",
     "gridspace[(False,True)] = plot_smooth.mouse_histogram(source=plot_mean)\n",
+    "#gridspace[(False,True)] = plot_smooth.mouse_histogram(source=plot_smooth_mean)\n",
     "\n",
     "\n",
     "gridspace.opts(plot_size=(200,200)) + (hv_img * hv_vf).opts(legend_position='right', frame_height=500)"
