--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -30,9 +30,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# optional debug messages\n",
     "import logging\n",
     "logging.basicConfig()\n",
-    "logging.getLogger('xsarsea').setLevel(logging.DEBUG)"
+    "logging.getLogger('xsarsea.windspeed').setLevel(logging.INFO) # or .setLevel(logging.DEBUG)"
    ]
   },
   {
@@ -236,7 +237,7 @@
    "outputs": [],
    "source": [
     "sarwing_luts_subset_path = xsarsea.get_test_file('sarwing_luts_subset')\n",
-    "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
+    "windspeed.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
     "\n",
     "windspeed_co, windspeed_dual = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
