--- a/docs/examples/xsarsea.ipynb
+++ b/docs/examples/xsarsea.ipynb
@@ -47,9 +47,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# optional debug message\n",
     "import logging\n",
     "logging.basicConfig()\n",
-    "logging.getLogger('xsarsea').setLevel(logging.DEBUG)"
+    "logging.getLogger('xsarsea').setLevel(logging.INFO) # .setLevel(logging.DEBUG) for more messages"
    ]
   },
   {
