--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -249,6 +249,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0381e454-21ec-4e9e-829b-9658279c1eb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windspeed_dual"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "29379eaa-c340-4f52-9586-dafecb0cfa19",
    "metadata": {},
@@ -320,6 +330,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cbb8b041-3030-439c-b632-1100aea51967",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xx =gmf_dummy(np.arange(20,22), np.arange(10,12))\n",
+    "print(xx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c7576513-14b3-48db-86d1-2089c50fb65c",
    "metadata": {},
    "outputs": [],
@@ -330,7 +351,7 @@
     "        sarwing_ds.owiNrcs_cross,\n",
     "        ancillary_wind=sarwing_ds.owi_ancillary_wind,\n",
     "        dsig_cr=dsig_cr,\n",
-    "        model=('gmf_cmod5n','gmf_dummy'))"
+    "        model=('gmf_cmod5n', gmf_dummy))"
    ]
   },
   {
